syntax ="proto3";

option java_package = "com.sohail.grpc";

service user{
rpc login(LoginRequest) returns(APIResponse);
rpc logout(Empty) returns (APIResponse);
}

service query1{
    rpc queryone(Details1) returns (Query1);
}

service query2{
    rpc querytwo(Details2) returns (Query2);
}
service query3{
    rpc querythree(Details3) returns (Query3);
}
service query4{
    rpc queryfour(Details4) returns (Query4);
}
service query5{
    rpc queryfive(Details5) returns (Query5);
}


message Details1{
     string Year=1;
    string State=2;
    string Type=3;
     string Length=4;
     string Expense=5;

}

message Query1{

    string Value=1;

}

message Details2{
    
    string Year=1;
    string Type=2;
    string Length=3;
    

}

message Query2{
    string state_1=1;
    string state_2=2;
    string state_3=3;
    string state_4=4;
    string state_5=5;
}

message Details3{
    
    string Year=1;
    string Type=2;
    string Length=3;
    

}

message Query3{
    string state_1=1;
    string state_2=2;
    string state_3=3;
    string state_4=4;
    string state_5=5;
}

message Details4{
    string r1=1;
    string r2=2;
    string Type=3;
    string Length=4;


}

message Query4{
    string state_1=1;
    string state_2=2;
    string state_3=3;
    string state_4=4;
    string state_5=5;
}

message Details5{
    
    string Year=1;
    string Type=2;
    string Length=3;
    

}

message Query5{

    
    string northeast=1;
    string southeast=2;
    string midwest=3;
    string southwest=4;
    string west=5;


}

message LoginRequest{
string username =1;
string password =2;
}

message APIResponse{
string responsemessage =1;
int32 responseCode =2;
}

message Empty{

}